# jfrog-intel-rag

./: .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  README.md  SOLUTION-REPORT.html  pyproject.toml
diagrams/: README.md  animations.css  architecture-simplified.d2  architecture-simplified.md  architecture.d2  architecture.md  infrastructure-simplified.d2  infrastructure-simplified.md  infrastructure.d2  infrastructure.md  retrieval-flow.d2  storage-flow.d2
docs/: ai-and-models.md  architecture.md  business-context.md  chat-and-report-console.md  deployment.md  operations.md  repo-structure.md  report-generator.md
ops/: Dockerfile.mcp
ops/openclaw/: AGENTS.md  README.md
src/ci_engine/: config.py  config.yaml  dimension_coverage.py  llm_json.py  ontology.py  secrets.py
src/ci_engine/acquire/: company_profile_lane.py  context7_lane.py  relevance.py  snapshots.py  tavily_lane.py  web_lane.py
src/ci_engine/chat/: __init__.py  answer.py  planner.py  report_store.py  retrieval.py  schemas.py  service.py  tool_cards.py  web.py
tests/: conftest.py  test_chat.py  test_company_profile_lane.py  test_compiler.py  test_config.py  test_coverage_status.py  test_coverage_verdict.py  test_db_connection.py  test_dimension_coverage.py  test_drivers.py  test_embed.py  test_heal_coverage_status.py  test_heal_dimensions.py  test_market_report.py  test_mcp_server.py  test_ontology.py  test_pipeline.py  test_relevance.py  test_report_crew.py  test_repository.py  test_retrieval.py  test_skills.py  test_ui.py  test_web_lane.py
tests/fixtures/: web_lane_sample.html
(+77 files in other folders)
