[project]
name = "ci-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "crewai>=0.95", "crewai-tools[mcp]>=0.25", "anthropic>=0.40", "google-genai>=1.0",
  "mcp>=1.2", "cloud-sql-python-connector[pg8000]>=1.12", "sqlalchemy>=2.0", "pgvector>=0.3",
  "tavily-python>=0.5", "feedparser>=6.0", "trafilatura>=1.12", "httpx>=0.27",
  "google-cloud-secret-manager>=2.20", "pyyaml>=6.0", "fastapi>=0.115", "uvicorn[standard]>=0.32",
  "jinja2>=3.1", "pydantic>=2.0", "weasyprint>=69.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
